--- a/home/assets/css/main.css
+++ b/home/assets/css/main.css
@@ -25,6 +25,15 @@
   list-type: none;
 }
 
+#topnav a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+
 #subnav {
   background-color: black;
 }
