--- a/home/assets/css/main.css
+++ b/home/assets/css/main.css
@@ -33,6 +33,12 @@
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
+}
+
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+}
 
 #subnav {
   background-color: black;
