--- a/home/assets/css/main.css
+++ b/home/assets/css/main.css
@@ -25,7 +25,7 @@
   list-type: none;
 }
 
-#topnav a {
+.navbar a {
     float: left;
     display: block;
     color: #f2f2f2;
@@ -35,7 +35,7 @@
     font-size: 17px;
 }
 
-.topnav a:hover {
+.navbar a:hover {
     background-color: #ddd;
     color: black;
 }
