--- a/home/assets/css/main.css
+++ b/home/assets/css/main.css
@@ -3,7 +3,7 @@
 
 .logo {
   color: red;
-  background-color: #00F;
+  background-color: #0F0;
   text-align: center;
   font: Times New Roman, serif;
   font-size: 18px;
@@ -14,7 +14,6 @@
 
 #topnav {
     background-color: #333;
-    overflow: hidden;;
 }
 
 .background {
@@ -31,6 +30,7 @@
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
+    overflow: hidden;
 }
 
 #topnav a:hover {
