--- a/home/assets/css/main.css
+++ b/home/assets/css/main.css
@@ -65,7 +65,7 @@
 /* The "responsive" class is added to the navbar with JavaScript when the user clicks on the icon. This class makes the navbar look good on small screens (display the links vertically instead of horizontally) */
 @media screen and (max-width: 600px) {
   #topnav.responsive {position: relative;}
-  #topnav.responsive a.icon {
+  #topnav.responsive .icon {
     position: absolute;
     right: 0;
     top: 0;
