--- a/home/assets/css/main.css
+++ b/home/assets/css/main.css
@@ -19,7 +19,7 @@
 .background {
   image-size: cover;
   background-color: darkgray;
-  background-image: url(#);
+  background-image: url("http://wallpapercave.com/wp/hNmtPnY.jpg");
 }
 
 .topnav {
