--- a/undefinedgames/assets/css/main.css
+++ b/undefinedgames/assets/css/main.css
@@ -49,3 +49,14 @@
     text-align: left;
   }
 }
+
+.logo {
+  color: red;
+  text-align: center;
+  font: Times New Roman, serif;
+  font-size: 18px;
+  float: left;
+  padding: 5px;
+  margins: 0px;
+  background-color: rgb(218, 26, 43);
+}
