--- a/home/assets/css/main.css
+++ b/home/assets/css/main.css
@@ -80,4 +80,7 @@
 
 .bodyheader {
   text-align: center;
+  font-family: "Times New Roman", Times, serif;
+  font-style: normal;
+  font-size: 1.875em;
 }
