--- a/home/assets/css/main.css
+++ b/home/assets/css/main.css
@@ -78,7 +78,7 @@
   }
 }
 
-.bodyheader {
+.bodyheader.p {
   text-align: center;
   font-family: "Times New Roman", Times, serif;
   font-style: normal;
