--- a/home/assets/css/main.css
+++ b/home/assets/css/main.css
@@ -74,7 +74,7 @@
   }
 }
 
-.bodyheader.p {
+#bodyhead, #bodybody {
   text-align: center;
   font-family: "Times New Roman", Times, serif;
   font-style: normal;
