--- a/undefinedgames/assets/css/main.css
+++ b/undefinedgames/assets/css/main.css
@@ -65,4 +65,16 @@
   display: table;
   margin: 0 auto;
   padding: 5px;
+  position: relative;
+  height: 0;
+  overflow: hidden;
+  padding-bottom: 56.25%;
+}
+
+#inner iframe {
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
