--- a/undefinedgames/assets/css/main.css
+++ b/undefinedgames/assets/css/main.css
@@ -66,7 +66,7 @@
   margin: 0 auto;
   padding: 5px;
   position: relative;
-  height: 0%;
+  height: 0;
   overflow: hidden;
   padding-bottom: 56.25%;
 }
