--- a/undefinedgames/assets/css/main.css
+++ b/undefinedgames/assets/css/main.css
@@ -66,19 +66,15 @@
   margin: 0 auto;
   padding: 5px;
   position: relative;
+  padding-bottom: 56.25%; /* 16:9 */
+  padding-top: 25px;
   height: 0;
-  overflow: hidden;
-  padding-bottom: 56.25%;
 }
 
 #inner iframe {
   position: absolute;
-  top:0;
+  top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-}
-
-iframe, object, embed {
-    max-width: 100%;
 }
